# Bran

./: CLAUDE.md  README.md  bootstrap.sh
bran_cli/: README.md  pyproject.toml
bran_cli/bran/: main.py
personas/: bran-blender.md  bran-fullstack.md  bran-gamedev.md  bran-security.md  bran-trader.md
ports/: AGENTS.md  aider.conf.yml  continue_config.json  cursor_rules.json  system_prompt.md
tester/: benchmark.py  requirements.txt
