[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bran-godmode"
version = "0.1.0"
authors = [
  { name="Umanga Bista", email="unrealumanga@gmail.com" },
]
description = "A CLI to install and manage Bran (God Mode) persona prompts for AI agents."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0",
]

[project.urls]
"Homepage" = "https://github.com/unrealumanga/Bran"
"Bug Tracker" = "https://github.com/unrealumanga/Bran/issues"

[project.scripts]
bran = "bran.main:cli"
